--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,10 @@
 
   <groupId>com.tilioteo</groupId>
   <artifactId>commons</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.9.1</version>
   <packaging>jar</packaging>
 
   <name>commons</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
